@@ -136,6 +136,7 @@ public class DescendantAxisTest {
     assertEquals(false, axis4.hasNext());
 
     wtx.abort();
+    wtx.close();
     session.close();
 
   }
